Add calculation visual

--- a/calc.html
+++ b/calc.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div id="calc">
-        <div style="grid-column: span 4"><div id="output"></div></div>
+        <div style="grid-column: span 4">
+            <div id="calculations">56 &div; 8 =</div>
+            <div id="output"></div>
+        </div>
         <!-- row 1 -->
         <div class="cell function" onclick="showHistory()">H</div>
         <div class="cell function" onclick="CEreset()">CE</div>
