add toggle history button

--- a/calc.html
+++ b/calc.html
@@ -13,7 +13,7 @@
             <div id="output"></div>
         </div>
         <!-- row 1 -->
-        <div class="cell function" onclick="showHistory()">H</div>
+        <div class="cell function" onclick="toggleHistory()">H</div>
         <div class="cell function" onclick="CEreset()">CE</div>
         <div class="cell function" onclick="Creset()">C</div>
         <div class="cell function" onclick="deleteDigit()">&larr;</div>
