--- a/calc.html
+++ b/calc.html
@@ -10,7 +10,7 @@
     <div id="calc">
         <div style="grid-column: span 4">
             <div id="calculations">56 &div; 8 =</div>
-            <div id="output"></div>
+            <div id="output">0</div>
         </div>
         <!-- row 1 -->
         <div class="cell function" onclick="toggleHistory()">H</div>
